--- a/functions/hello/package.json
+++ b/functions/hello/package.json
@@ -6,12 +6,15 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.7.2",
+    "split": "^1.0.0",
     "unzip": "^0.1.11"
   },
   "scripts": {
-    "build": "babel src -d build"
+    "build": "tsc --outDir build"
   },
   "devDependencies": {
+    "@types/node": "^0.0.2",
+    "@types/split": "^0.3.28",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-plugin-syntax-async-functions": "^6.13.0",
