--- a/gikou/tsconfig.json
+++ b/gikou/tsconfig.json
@@ -5,7 +5,8 @@
         "lib": [
             "dom",
             "es2017"
-        ]
+        ],
+        "outDir": "build"
     },
     "files": [
         "src/index.ts"
